--- a/README
+++ b/README
@@ -1,4 +1,64 @@
-RECIPES
-["apps4", "controllers", "core", "deployment", "email", "extras", "frontend", "gems", "git", "init", "models", "prelaunch", "railsapps", "readme", "routes", "saas", "setup", "testing", "tests4", "views"]
-PREFERENCES
-{:git=>true, :apps4=>"none", :dev_webserver=>"webrick", :prod_webserver=>"same", :database=>"postgresql", :templates=>"erb", :unit_test=>"rspec", :integration=>"rspec-capybara", :continuous_testing=>"none", :fixtures=>"factory_girl", :frontend=>"bootstrap3", :email=>"gmail", :authentication=>"devise", :devise_modules=>"default", :authorization=>"cancan", :form_builder=>"simple_form", :starter_app=>"admin_app"}
+Busk
+========================
+
+This application was generated with the rails_apps_composer gem:
+https://github.com/RailsApps/rails_apps_composer
+provided by the RailsApps Project:
+http://railsapps.github.io/
+
+________________________
+
+Recipes:
+
+* apps4
+* controllers
+* core
+* deployment
+* email
+* extras
+* frontend
+* gems
+* git
+* init
+* models
+* prelaunch
+* railsapps
+* readme
+* routes
+* saas
+* setup
+* testing
+* tests4
+* views
+
+Preferences:
+
+* git: true
+* apps4: none
+* dev_webserver: webrick
+* prod_webserver: same
+* database: postgresql
+* templates: erb
+* unit_test: rspec
+* integration: rspec-capybara
+* continuous_testing: none
+* fixtures: factory_girl
+* frontend: bootstrap3
+* email: gmail
+* authentication: devise
+* devise_modules: default
+* authorization: cancan
+* form_builder: simple_form
+* starter_app: admin_app
+* rvmrc: true
+* quiet_assets: true
+* local_env_file: figaro
+* better_errors: true
+* pry: true
+* ban_spiders: true
+* github: true
+
+________________________
+
+License
+
